ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: ntfy
        image: binwiederhier/ntfy:v2.13
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "400m"
            memory: "400Mi"
          requests:
            cpu: "200m"
            memory: "100Mi"
        ports:
        - containerPort: 80
        command: ["ntfy", "serve"]
        volumeMounts:
        - name: ntfy-lib
          mountPath: /var/lib/ntfy
      volumes:
      - name: ntfy-lib
        persistentVolumeClaim:
          claimName: ntfy-lib-pvc
